--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🌹</title>
+    <title>ха-ха-ха</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">    
@@ -15,13 +15,10 @@
 
 
   <div class="rose">
-    <button class="btn-start" onclick="showText()">Запустить</button>
-    <div id="output"></div>
-    <p id="smile-text"> Улыбнись :) </p>
+    <p class="btn-start">Нет больше роз</p>
   </div>
 
 
 
-  <script src="./js/script.js"></script>
 </body>
 </html>
